<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nord_whitish"
    android:padding="16dp"
    tools:context=".ui.edit.EditCitiesFragment">

    <TextView
        android:id="@+id/tvEditCitiesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/edit"
        android:textColor="@color/nord_black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/etField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etField"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field_shape"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/et_hint"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/nord_black"
        android:textColorHint="#aaa"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditCitiesHeader" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_add_text"
        android:textColor="@color/nord_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_button_shape"
        android:padding="8dp"
        android:text="@string/go_back"
        android:textColor="@color/subtle_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRemove" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemove"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field_shape"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_remove_text"
        android:textColor="@color/nord_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />


</androidx.constraintlayout.widget.ConstraintLayout>